# SyQMA

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: basic_example.ipynb  steane_code.ipynb
paper/: create_figures.ipynb
paper/fig_1_iceberg_discard/: data.json  script.py
paper/fig_2_steane_ler/: data.json  script.py
paper/fig_3_steane_h_magic_ler/: data.json  script.py
paper/fig_4_steane_syndromes/: data.json  data_fluctuating.json  script.py  script_fluctuating.py
paper/fig_5_15_1_3_ler/: data.json  script.py
paper/fig_6_15_1_3_t_magic_ler/: data.json  script.py
paper/fig_7_15_1_3_t_magic_memory_time/: data.txt  script.py
paper/fig_8_17_1_5_ler/: SeventeenColorCode.json  data.json  script.py
src/syqma/: __init__.py  bitint.py  evaluate_result.py  gf2.py  kernels.py  maths.py  measure_result.py  noise.py  operations.py  pauli.py  phase.py  qec_simulator.py  result.py  simulator.py  utils.py
tests/: conftest.py  test_bitint.py  test_integration_advanced.py  test_integration_basic.py  test_kernels.py  test_maths.py  test_noise.py  test_operations.py  test_pauli.py  test_phase.py  test_result.py
