[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "syqma"

[tool.uv.sources]
syqma = { path = ".", editable = true }

[project]
name = "syqma"
version = "0.1.0"
description = "Symbolic Quantum Memory-efficient Analyser"
readme = "README.md"
authors = [
  { name = "George Umbrarescu", email = "georgeumbrarescu@gmail.com" },
  { name = "David Amaro", email = "david.amaro@quantinuum.com" },
]
requires-python = ">=3.13"
dependencies = [
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.8",
  "joblib>=1.4.2",
  "matplotlib>=3.10.0",
  "numba>=0.61.2",
  "numpy>=2.2.2",
  "pympler>=1.1",
  "pytest>=8.3.4",
  "pytket>=1.39.0",
  "pytket-qiskit>=0.63.0",
  "qiskit>=1.3.2",
  "qiskit-aer>=0.16.0",
  "rich>=13.9.4",
  "rsmf>=0.2.1",
  "stim>=1.14.0",
  "zstandard>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
